Selesai Tugas Dicoding

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <h2>Republik Singapura</h2>
                 <p>Negeri 1001 Larangan</p>
                 <figure>
-                    <img src="image/flag-of-Singapore.png">
+                    <img src="image/flag-of-Singapore.png" alt="Singapore flag">
                 </figure>
             
             <section>
@@ -293,7 +293,7 @@
             <section class="profile card">
                 <h2>About Me</h2>
                 <figure>
-                    <img src="image/ybsma1.png" >
+                    <img src="image/ybsma1.png" alt="author photo" >
                 </figure>
                 <table class="table">
                     <tr>
@@ -339,28 +339,28 @@
         <div class="container">
             <div class="box first">
                 <figure>
-                    <img src="image/gmail.png">
+                    <img src="image/gmail.png" alt="Gmail logo">
                     <p>erick.ezrandy@ui.ac.id</p>
                 </figure>
             </div>
 
             <div class="box third">
                 <figure>
-                    <img src="image/line.png">
+                    <img src="image/line.png" alt="Line logo">
                     <p>erickezrandy1</p>
                 </figure>
             </div>
 
             <div class="box second">
                 <figure>
-                    <img src="image/instagram.webp">
+                    <img src="image/instagram.webp" alt="Instagram logo">
                     <a href="https://instagram.com/erick_ezrandy?igshid=7ysait3w2193"><p>erick_ezrandy</p></a>
                 </figure>
             </div>
 
             <div class="box fourth">
                 <figure>
-                    <img src="image/linkedin.png">
+                    <img src="image/linkedin.png" alt="Linkedin logo">
                     <a href="https://www.linkedin.com/in/erick-ezrandy-4384151b7/"><p>Erick Ezrandy</p></a>
                 </figure>
             </div>
